add lvgl, fix bugs

--- a/sdk/apps/smart_robot/board/wl83/SMART_ROBOT.cbp
+++ b/sdk/apps/smart_robot/board/wl83/SMART_ROBOT.cbp
@@ -103,6 +103,7 @@
 <Add directory="../../../../apps/smart_robot/ui/rlottie_impl/src/vector" />
 <Add directory="../../../../apps/smart_robot/ui/rlottie_impl/src/vector/freetype" />
 <Add directory="../../../../apps/common" />
+<Add directory="../../../../apps/common/asr/jlkws" />
 <Add directory="../../../../apps/common/include" />
 <Add directory="../../../../apps/common/lcd/include" />
 <Add directory="../../../../apps/common/config/include" />
@@ -326,89 +327,10 @@
 </ExtraCommands>
 </Target>
 </Build>
-<Unit filename="../../../../apps/common/c++/cpp_run_init.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/c++/cxx_runtime.cpp">
-<Option compiler="pi32v2_r3_empty_compiler" use="1" buildCommand="$compiler $options -std=gnu++14 -fno-exceptions -fno-rtti $includes -c $file -o $object" />
-</Unit>
+<Unit filename="../../../../apps/common/asr/jlkws/jlsp_far_keyword.h" />
 <Unit filename="../../../../apps/common/audio_music/audio_enc_aec_data.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP.h" />
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_ae.h" />
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_awb.h" />
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/GC1084_DVP/GC1084_DVP_iq.h" />
-<Unit filename="../../../../apps/common/camera/N5_DVP/N5_DVP.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/N5_DVP/N5_DVP.h" />
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp.h" />
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_ae.h" />
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_awb.h" />
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/SP140A_dvp/sp140a_dvp_iq.h" />
-<Unit filename="../../../../apps/common/camera/TVP5150A_DVP.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc0308/gc0308.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi.h" />
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_ae.h" />
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_awb.h" />
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/gc1084_mipi/gc1084_mipi_iq.h" />
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp.h" />
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_ae.h" />
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_awb.h" />
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_dvp/h63p_dvp_iq.h" />
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi.h" />
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_ae.h" />
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_awb.h" />
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/h63p_mipi/h63p_mipi_iq.h" />
 <Unit filename="../../../../apps/common/camera/isp_scenes.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/common/camera/isp_tools.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245.h" />
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_ae.h" />
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_awb.h" />
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1245_dvp/sc1245_iq.h" />
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi.h" />
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_ae.h" />
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_awb.h" />
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1336_mipi/sc1336_mipi_iq.h" />
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi.h" />
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_ae.h" />
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_awb.h" />
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1345_mipi/SC1345_mipi_iq.h" />
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi.h" />
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_ae.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_ae.h" />
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_awb.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_awb.h" />
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_iq.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/common/camera/sc1346_mipi/SC1346_mipi_iq.h" />
 <Unit filename="../../../../apps/common/config/bt_profile_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/common/config/include/bt_profile_cfg.h" />
 <Unit filename="../../../../apps/common/config/log_config/app_config.c"><Option compilerVer="CC"/></Unit>
@@ -516,6 +438,7 @@
 <Unit filename="../../../../apps/smart_robot/audio/vol_sync.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/audio/asr/tuoyun_wakeup_detect.h" />
 <Unit filename="../../../../apps/smart_robot/audio/asr/tuoyun_wakeup_detect.c"><Option compilerVer="CC"/></Unit>
+<Unit filename="../../../../apps/smart_robot/audio/asr/tuoyun_kws.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/audio/player/tuoyun_flow_player.h" />
 <Unit filename="../../../../apps/smart_robot/audio/player/tuoyun_flow_player.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/audio/recorder/tuoyun_voice_recorder.h" />
@@ -540,8 +463,9 @@
 <Unit filename="../../../../apps/smart_robot/include/app_tone.h" />
 <Unit filename="../../../../apps/smart_robot/include/app_ble.h" />
 <Unit filename="../../../../apps/smart_robot/include/mic_effect.h" />
+<Unit filename="../../../../apps/smart_robot/include/app_mcp_server.h" />
 <Unit filename="../../../../apps/smart_robot/include/app_ota.h" />
-<Unit filename="../../../../apps/smart_robot/include/protocol.h" />
+<Unit filename="../../../../apps/smart_robot/include/app_protocol.h" />
 <Unit filename="../../../../apps/smart_robot/include/scene_switch.h" />
 <Unit filename="../../../../apps/smart_robot/include/user_cfg_id.h" />
 <Unit filename="../../../../apps/smart_robot/include/vol_sync.h" />
@@ -556,7 +480,6 @@
 <Unit filename="../../../../apps/smart_robot/protocol/session/session.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/protocol/traffic/traffic.h" />
 <Unit filename="../../../../apps/smart_robot/protocol/traffic/traffic.c"><Option compilerVer="CC"/></Unit>
-<Unit filename="../../../../apps/smart_robot/protocol/mcp/mcp_server.h" />
 <Unit filename="../../../../apps/smart_robot/protocol/mcp/mcp_server.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/protocol/sip/osip/include/osipparser2/headers/osip_accept_encoding.h" />
 <Unit filename="../../../../apps/smart_robot/protocol/sip/osip/include/osipparser2/headers/osip_call_id.h" />
@@ -1102,6 +1025,7 @@
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_fmt_txt.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_fmt_txt.h" />
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_fmt_txt_private.h" />
+<Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_hansans_16.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_montserrat_10.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_montserrat_12.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/ui/lvgl_v9/src/font/lv_font_montserrat_14.c"><Option compilerVer="CC"/></Unit>
