--- a/sdk/apps/smart_robot/board/wl83/SMART_ROBOT.cbp
+++ b/sdk/apps/smart_robot/board/wl83/SMART_ROBOT.cbp
@@ -458,6 +458,7 @@
 <Unit filename="../../../../apps/smart_robot/debug/debug_server.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/event/app_event.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="../../../../apps/smart_robot/include/app_config.h" />
+<Unit filename="../../../../apps/smart_robot/include/app.h" />
 <Unit filename="../../../../apps/smart_robot/include/app_event.h" />
 <Unit filename="../../../../apps/smart_robot/include/app_msg.h" />
 <Unit filename="../../../../apps/smart_robot/include/app_tone.h" />
